New great modifications. Many improvements and changes.

--- a/app/locale/pt_BR/DSpalenzaDArthur_Bcash.csv
+++ b/app/locale/pt_BR/DSpalenzaDArthur_Bcash.csv
@@ -1,3 +1,5 @@
+"Yes","Sim"
+"No","Não"
 "Enabled","Habilitado"
 "Payment Method Title","Título da Forma de Pagamento"
 "Credit Cards Accepted","Cartões de Crédito Aceitos"
@@ -7,4 +9,21 @@
 "Enable Receipt of Notifications","Habilitar Recebimento de Notificações"
 "Enable Installments","Ativar Parcelamento"
 "Enable Prototype Validation for Fields","Validar Campos com Prototype"
-"Reduce Form for Custom Checkout","Reduzir Formulário para Checkout Personalizado"
+"Reduce Form for Customized Checkout","Reduzir Formulário para Checkout Personalizado"
+"Production","Produção"
+"Sandbox","Sandbox"
+"Some error has occurred when trying to place your order.","Ocorreu um erro ao tentar criar o seu pedido."
+"The errors are described right below:","Os erros estão descritos logo abaixo:"
+"Code: %s - Description: %s","Código: %s - Descrição: %s"
+"Please correct any information if needed and try again or contact us for help.","Por favor, corrija qualquer informação que seja necessária e tente novamente ou entre em contato conosco para que possamos lhe ajudar."
+"Error Message Prefix","Prefixo da Mensagem de Erro"
+"Error Message Sufix","Sufixo da Mensagem de Erro"
+"Transaction URL Type","Tipo de Dados da Transação"
+"Name on the Card: %s","Nome no Cartão: %s"
+"Credit Card Type: %s","Bandeira do Cartão: %s"
+"Credit Card Number: xxxx-%s","Número do Cartão: xxxx-%s"
+"Expiration Date: %s/%s","Validade do Cartão: %s/%s"
+"Installments: %s","Parcelas: %s"
+"Transaction Code: %s","Código da Transação: %s"
+"Bank Billet","Boleto Bancário"
+"Bank Transfer","Transferência Bancária"
