--- a/app/locale/pt_BR/DSpalenzaDArthur_Bcash.csv
+++ b/app/locale/pt_BR/DSpalenzaDArthur_Bcash.csv
@@ -5,7 +5,7 @@
 "Credit Cards Accepted","Cartões de Crédito Aceitos"
 "Enviroment","Ambiente"
 "Integration Token","Token de Integração"
-"Recipient Email","E-mail do Destinatário"
+"Seller Email","E-mail do Vendedor"
 "Enable Receipt of Notifications","Habilitar Recebimento de Notificações"
 "Enable Installments","Ativar Parcelamento"
 "Enable Prototype Validation for Fields","Validar Campos com Prototype"
@@ -27,3 +27,6 @@
 "Transaction Code: %s","Código da Transação: %s"
 "Bank Billet","Boleto Bancário"
 "Bank Transfer","Transferência Bancária"
+"Stop Checkout Order When the Transaction is Canceled by BCash!","Manter o Cliente no Checkout Quando a Transação for Cancelada pelo BCash!"
+"When the customer is checking out an order and BCash cancels it for any reason, this option avoid the order to be placed and keeps the customer in the checkout.","Quando o cliente finaliza o pedido e o BCash cancela a transação por algum motivo, esta opção evita que o pedido seja concluído e mantém o cliente no checkout."
+"Message to be Shown to Customer","Mensagem a ser Mostrada para o Cliente"
